# newrelic-ndk-agent

./: .gitignore  README.md  ROADMAP.md  THIRD_PARTY_NOTICES.md  build.gradle  buildconfig.gradle  gradle.properties  settings.gradle
.github/workflows/: android.yml  codecov.yml  create_release.yml  sonatypeDeployment.yml
agent-ndk/: .gitignore  build.gradle
agent-ndk/docs/: crash-11.arm64  crash-4.arm64  crash-4.x64  crash-4.x86  crash-4.x86_64
agent-ndk/src/main/cpp/: CMakeLists.txt  UnitTests.cmake  agent-ndk.cpp  anr-handler.cpp  anr-handler.h  backtrace.cpp  backtrace.h  emitter.cpp  emitter.h  parson.c  parson.h  procfs.cpp  procfs.h  serializer.cpp  serializer.h  signal-handler.cpp  signal-handler.h  signal-utils.cpp  signal-utils.h  terminate-handler.cpp  terminate-handler.h  unwinder.cpp
agent-ndk/src/main/cpp/include/: agent-ndk.h
agent-ndk/src/main/cpp/jni/: jni-delegate.cpp  jni-delegate.h  jni.cpp  jni.h  native-context.cpp  native-context.h
agent-ndk/src/main/java/com/newrelic/agent/android/ndk/: ANRMonitor.kt  AgentNDK.kt  AgentNDKListener.kt  JVMDelegate.kt  ManagedContext.kt  NativeCrash.kt  NativeException.kt  NativeLogger.kt  NativeStackFrame.kt  NativeStackTrace.kt  NativeThreadInfo.kt
agent-ndk/src/main/res/values/: strings.xml
agent-ndk/src/test/cpp/: AgentNDKTests.cpp  CMakeLists.txt  TestFixtures.cpp  catch.cpp
agent-ndk/src/test/java/com/newrelic/agent/android/: SpyContext.kt
agent-ndk/src/test/java/com/newrelic/agent/android/ndk/: ANRMonitorTest.kt  AgentNDKTest.kt  JVMDelegateTest.groovy  ManagedContextTest.kt  NativeCrashTest.kt  NativeExceptionTest.kt  NativeStackFrameTest.kt  NativeStackTraceTest.kt  NativeThreadInfoTest.kt
agent-ndk/src/test/resources/: backtrace.json  stackframe.json  threadInfo.json
docs/: Android Native Agent MVP  Notes  anr.x86  crash-4.backtrace
gradle/wrapper/: gradle-wrapper.properties
samples/android-test-native/: appLaunchTimes  build.gradle  newrelic.properties
samples/android-test-native/.android/: debug.keystore
samples/android-test-native/src/legacy/java/com/newrelic/agent/android/ndk/samples/: NewRelicAgent.kt
samples/android-test-native/src/main/: AndroidManifest.xml
samples/android-test-native/src/main/cpp/: CMakeLists.txt  native-lib.cpp  procfs.cpp  procfs.h
samples/android-test-native/src/main/java/com/newrelic/agent/android/ndk/: AndroidTestNative.kt  MainActivity.kt
samples/android-test-native/src/main/java/com/newrelic/agent/android/ndk/samples/: AndroidTestNative.kt  CheeseyContentProvider.kt  MainActivity.kt
samples/android-test-native/src/main/java/com/newrelic/agent/android/ndk/samples/service/: AlarmProvider.kt  SleepyBackgroundService.kt  SleepyBinder.kt
samples/android-test-native/src/main/res/layout/: activity_main.xml
samples/android-test-native/src/main/res/menu/: settings.xml
samples/android-test-native/src/main/res/values/: arrays.xml  strings.xml  themes.xml
samples/android-test-native/src/main/res/values-night/: themes.xml
samples/android-test-native/src/ndk/java/com/newrelic/agent/android/ndk/samples/: NewRelicAgent.kt
src/main/: AndroidManifest.xml
src/main/cpp/: CMakeLists.txt  UnitTests.cmake  agent-ndk.cpp  anr-handler.cpp  anr-handler.h  backtrace.cpp  backtrace.h  emitter.cpp  procfs.cpp  procfs.h  serializer.cpp  serializer.h  signal-handler.cpp  signal-handler.h  signal-handlers.c  signal-handlers.cpp  signal-handlers.h  signal-utils.cpp  signal-utils.h  terminate-handler.cpp  unwinder.cpp  unwinder.h
src/main/cpp/demangle/: cp-demangle.c  cp-demangle.h  demangle.h
src/main/cpp/include/: agent-ndk.h
src/main/cpp/jni/: jni-delegate.cpp  jni-delegate.h  jni.cpp  jni.h  native-context.h  native_context.cpp
src/main/java/com/newrelic/agent/android/ndk/: ANRMonitor.kt  ANRStackTrace.kt  AgentNDK.kt  AgentNDKListener.kt  JVMDelegate.kt  JVMStackTrace.kt  JavaDelegate.kt  ManagedContext.kt  NativeCrash.kt  NativeException.kt  NativeStackTrace.kt  NativeThreadInfo.kt
src/main/sh/: gather-syms.sh  ndk-stack-watcher.sh
src/test/cpp/: CMakeLists.txt  SimpleTests.cpp  TestFixtures.cpp  catch.hpp
src/test/java/com/newrelic/agent/android/: SpyContext.kt
src/test/java/com/newrelic/agent/android/ndk/: ANRMonitorTest.kt  AgentNDKTest.kt  ManagedContextTest.kt  NativeCrashTest.kt  NativeExceptionTest.kt  NativeStackFrameTest.kt  NativeStackTraceTest.kt  NativeThreadInfoTest.kt
src/test/resources/: backtrace.json  crash.json  stackframe.json  threadInfo.json
